@@ -206,7 +206,7 @@ struct cfg_node
   std::set<var_t> alive;
   std::set<var_t> dying;
 
-#if 0 
+#ifdef TD_SALLOC
   std::set<symbol *> stack_alive;
   boost::icl::interval_set<int> free_stack;
 #endif
@@ -1021,8 +1021,8 @@ void dump_tree_decomposition(const tree_dec_t &tree_dec)
 #endif
 }
 
-#if 0
-// Coloring as in Thorup's algorihtm C, modified to account for variables of different size.
+#ifdef TD_SALLOC
+// Coloring as in Thorup's algorithm C, heavily modified to account for variables of different size.
 template <class p_t, class G_t>
 void thorup_C_color(const p_t &p, G_t &G, const std::map<unsigned int, std::set<unsigned int> > &S, int size)
 {
@@ -1032,8 +1032,8 @@ void thorup_C_color(const p_t &p, G_t &G, const std::map<unsigned int, std::set<
       
       boost::icl::interval_set<int> used_colors;
       for(s = G[i].stack_alive.begin(); s != G[i].stack_alive.end(); ++s)
-        ;//if(s->second != INT_MIN)
-          ;//used_colors |= boost::icl::discrete_interval<int>::type(s->second, s->second + s->first->nRegs);
+        ;/*if(s->second != INT_MIN)
+          used_colors |= boost::icl::discrete_interval<int>::type(s->second, s->second + s->first->nRegs);*/
       G[i].free_stack -= used_colors;
     
       typename p_t::const_iterator pi = p.find(i);
@@ -1049,18 +1049,17 @@ void thorup_C_color(const p_t &p, G_t &G, const std::map<unsigned int, std::set<
                 // Find a suitable free stack location.
                 for(si = G[i].free_stack.begin();; ++si)
                   {
-                    // Adjust start address for alignment (even on architectures that do not require this, it is necessary for the approximation quality proof to hold)
-                    if(size == 2 || size == 4 && boost::icl::first(*si) % size)
-                      start = boost::icl::first(*si) + size - boost::icl::first(*si) % size;
-                    else
-                      start = boost::icl::first(*si);
+                    start = boost::icl::first(*si);
+                    // Adjust start address for alignment
+                    if(size == 2 || size == 4 && start % size)
+                      start = start + size - start % size;
                     
                     if(boost::icl::last(*si) >= start + size)
                       break; // Found one.
                   }
                 //s->second = start;
                 G[i].free_stack -= boost::icl::discrete_interval<int>::type(start, start + size);
-                std::cout << "Assigned " << (*s)->name << "\n";
+                std::cout << "Assigned " << (*s)->name << " to " << start << "\n";
               }
         }
       else
@@ -1070,7 +1069,7 @@ void thorup_C_color(const p_t &p, G_t &G, const std::map<unsigned int, std::set<
 }
 
 template <class G_t>
-void tree_dec_salloc(G_t &G, /*const*/ std::map<unsigned int, std::set<unsigned int> > &S)
+void tree_dec_salloc(G_t &G, const std::map<unsigned int, std::set<unsigned int> > &S)
 {
   std::map<unsigned int, unsigned int> p;
   std::set<int> sizes;
@@ -1086,7 +1085,9 @@ void tree_dec_salloc(G_t &G, /*const*/ std::map<unsigned int, std::set<unsigned 
     }
     
   for(std::set<int>::const_reverse_iterator s = sizes.rbegin(); s != sizes.rend(); ++s)
-    thorup_C_color(p, G, S, *s);
+    {
+      thorup_C_color(p, G, S, *s);
+    }
 }
 #endif
 
